--- a/code/scala/pbt_project.yml
+++ b/code/scala/pbt_project.yml
@@ -2,6 +2,21 @@ name: lucinda.towne
 description: User fork
 version: 1
 author: will.senger@yahoo.com
-workflows: {}
+workflows:
+  workflows/W1:
+    name: W1
+    description: Really solid info
+    author: will.senger@yahoo.com
+    mode: batch
+    language: scala
+    createdAt: '2022-01-05 18:26:11'
+    datasets:
+      inputs: []
+      outputs: []
 datasets: {}
-schedules: {}
+schedules:
+  schedules/Mrs__Davis_Will:
+    name: Mrs__Davis_Will
+    description: Really solid info
+    createdAt: '2022-01-05 18:26:11'
+    author: will.senger@yahoo.com
